--- a/FirstSelection/index.html
+++ b/FirstSelection/index.html
@@ -326,7 +326,7 @@
 
       <div class="operations">
         <div class="operations__tab-container">
-          <button class="btn operations__tab operations__tab--1 operations__tab--active" data tab="1">
+          <button class="btn operations__tab operations__tab--1 operations__tab--active" data-tab="1">
             <span>01</span>Book an Appointment
           </button>
           <button class="btn operations__tab operations__tab--2" data-tab="2">
